Fixed validation issues such as alt on images, and <strong> being used wrong on about us text. Also fixed major security issue with database regarding login not being needed to access.

--- a/css/style.css
+++ b/css/style.css
@@ -963,3 +963,6 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 }
 
 /*END CAMPUS PAGE CSS*/ 
+.infoText p, .infoText li{
+    font-weight: bold;
+}
